--- a/angular/app-i18n/src/assets/i18n/ua.json
+++ b/angular/app-i18n/src/assets/i18n/ua.json
@@ -1,3 +1,5 @@
 {
-  "TITLE": "My i18n Application (ua)"
+  "TITLE": "Nederlandse vertaling geladen :)",
+  "SAVE": "Opslaan",
+  "WELCOME": "Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen. Schaakmat... Ja, maar John, als The Pirates of the Caribbean kapot gaat, eten de piraten de toeristen niet op. Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen."
 }
