--- a/angular/app-i18n/src/assets/i18n/en.json
+++ b/angular/app-i18n/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "TITLE": "Loaded english translation :)",
   "SAVE": "Save",
-  "WELCOME": "This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Checkmate... Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows."
+  "WELCOME": "This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Checkmate... Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows.",
+  "INPUT-PLACEHOLDER": "Type your name here..."
 }
