--- a/angular/app-i18n/src/assets/i18n/nl.json
+++ b/angular/app-i18n/src/assets/i18n/nl.json
@@ -1,6 +1,7 @@
 {
-  "TITLE": "Nederlandse vertaling geladen :)",
-  "SAVE": "Opslaan",
-  "WELCOME": "Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen. Schaakmat... Ja, maar John, als The Pirates of the Caribbean kapot gaat, eten de piraten de toeristen niet op. Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen.",
-  "INPUT-PLACEHOLDER": "Typ je naam hier..."
+  "title": "Nederlandse vertaling geladen :)",
+  "error": "Er is iets fout gegaan, probeer het later opnieuw...",
+  "save": "Opslaan",
+  "welcome": "Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen. Schaakmat... Ja, maar John, als The Pirates of the Caribbean kapot gaat, eten de piraten de toeristen niet op. Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen.",
+  "input-placeholder": "Typ je naam hier..."
 }
