--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -3,5 +3,9 @@
   "error": "Er is iets fout gegaan, probeer het later opnieuw...",
   "save": "Opslaan",
   "welcome": "Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen. Schaakmat... Ja, maar John, als The Pirates of the Caribbean kapot gaat, eten de piraten de toeristen niet op. Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen.",
-  "input-placeholder": "Typ je naam hier..."
+  "input-placeholder": "Typ je naam hier...",
+  "text": {
+    "succes": "Item is toegevoegd",
+    "deleteSucces": "Item is verwijderd"
+  }
 }
