--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,16 @@
 {
+  "button": {
+    "save": "Save",
+    "delete": "Delete",
+    "cancel": "Cancel"
+  },
   "title": "Loaded english translation :)",
   "error": "Something went wrong, try again later...",
   "save": "Save",
   "welcome": "This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Checkmate... Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows.",
-  "input-placeholder": "Type your name here..."
+  "input-placeholder": "Type your name here...",
+  "text": {
+    "succes": "Item added",
+    "deleteSucces": "Item deleted"
+  }
 }
