--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -1,4 +1,9 @@
 {
+  "button": {
+    "save": "Opslaan",
+    "delete": "Verwijderen",
+    "cancel": "Annuleren"
+  },
   "title": "Nederlandse vertaling geladen :)",
   "error": "Er is iets fout gegaan, probeer het later opnieuw...",
   "save": "Opslaan",
