--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "Loaded english translation :)",
+  "title": "Local English translation loaded...",
   "error": "Something went wrong, try again later...",
   "save": "Save",
   "welcome": "This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Checkmate... Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows.",
