--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -1,5 +1,5 @@
 {
-  "title": "Nederlandse vertaling geladen :)",
+  "title": "Lokale Nederlandse vertaling geladen...",
   "error": "Er is iets fout gegaan, probeer het later opnieuw...",
   "save": "Opslaan",
   "welcome": "Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen. Schaakmat... Ja, maar John, als The Pirates of the Caribbean kapot gaat, eten de piraten de toeristen niet op. Dit ding is volledig geladen. AM/FM radio, verstelbare kuipstoelen, en... elektrische ramen.",
